# easy-server-client

./: CMakeLists.txt  README.md
samples/: CMakeLists.txt  client_tcpip.cc  server_tcpip.cc
src/: CMakeLists.txt  common.h  tcp_udp_srv_cli.cc  tcp_udp_srv_cli.h
unit_tests/: CMakeLists.txt  main.cc  string_split_test.cc  tcp_udp_srv_cli_test.cc  unit_tests_common.h
